# rtaafin

./: .eslintrc.cjs  .gitignore  0001-chore-security-remove-NODE_TLS_REJECT_UNAUTHORIZED-m.patch  0002-feat-dev-add-scripts-check-certs.js-to-diagnose-TLS-.patch  0003-docs-update-scripts-USAGE.md-with-TLS-guidance.patch  0004-chore-dev-add-tsx-dev-dep-and-replace-local-zod-shim.patch  502_ERROR_ROOT_CAUSE_AND_FIX.md  ADDITIONAL_MEMORY_FIXES.md  ADD_DEEPGRAM_API_KEY.md  ANALYSIS_REVIEW.md  API_QUICK_REFERENCE.md  API_TEST_REPORT.md  API_TEST_RESULTS.md  ARCHITECTURE_DIAGRAM_FOR_CTO.md  ASR_CHUNKING_LEARNINGS.md  ASR_ERROR_EXPLANATION.md  ASR_TEST_DIAGNOSIS.md  ASR_WORKER_ALL_ENV_VARS.md  ASR_WORKER_BUILD_FIX.md  ASR_WORKER_BUILD_ROOT_CAUSE.md  ASR_WORKER_DEPLOYMENT_SUCCESS.md  ASR_WORKER_ENV_VARS.md  ASR_WORKER_QUICK_CHECK.md  ASR_WORKER_REFACTORING.md  ASR_WORKER_VERIFICATION.md  AUTOMATED_SYSTEM_COMPLETE.md  AUTOMATED_TRANSCRIPT_TESTING.md  AZURE_SETUP.md  BUILD_FIX_NEXTJS_15_PARAMS.md  BUILD_FIX_SUMMARY.md  CALL_END_BUFFER_CLEANUP_FIX.md  CI.md  COMPLETE_E2E_TEST.md  COMPLETE_FLOW_TEST.md  COMPREHENSIVE_FIX_SUMMARY.md  CONFIGURATION_AUDIT.md  CONTINUOUS_STREAMING_FIX.md  CRITICAL_BUILD_FIXES.md  CRITICAL_FIXES_SUMMARY.md  CTO_ANALYSIS_TRANSCRIPTION_ISSUES.md  (+290 more)
services/pipecat-copilot/: .dockerignore  .gitignore  Dockerfile  FIXES_SUMMARY.md  README.md  RENDER_DEPLOYMENT.md  pyproject.toml  requirements.txt
services/pipecat-copilot/scripts/: README.md  test_audio_directory.py  test_local_audio.py
services/pipecat-copilot/src/: __init__.py  api_server.py  config.py  (+9 more)
(+474 files in other folders)
